# stonks

./: LICENSE  README.md  stonks.cabal
app/: Main.hs  Stonks.hs
src/: Balance.hs  Fundamentals.hs  Income.hs  Price.hs  Stonks.hs  Tabular.hs
